# ucc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  README.md  custom_cx.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/DISCUSSION_TEMPLATE/: new-compiler-pass.md  new-compiler-pass.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-compiler-pass.md  new-transpiler-pass.md  research_reference.md
.github/workflows/: python-publish.yml  test.yml  trigger-ucc-bench-pr.yml  trigger-ucc-bench.yml  ucc-benchmarks.yml
benchmarks/: __init__.py  check_parameterized.ipynb  custom_compile_qft.ipynb  generate_qasm.ipynb  hardware_benchmark.ipynb  load_ucc_benchmarks.ipynb  qbraid_transpile_tests.ipynb  results_2024-10-31_16-10-48.csv  run_ucc_benchmarks.ipynb  ucc_benchmarks.ipynb  write_qasm.py
benchmarks/circuits/: __init__.py
benchmarks/old_notebooks/: check_parameterized.ipynb  custom_compile_heisenberg_ring.ipynb  custom_compile_qcnn.ipynb  custom_compile_qft.ipynb  custom_compile_random.ipynb  ucc_benchmarks_test_qiskit_passes.ipynb
benchmarks/results/: expval-results_2024-11-26_16-25-54.json  expval-results_2024-11-26_20-28-53.json  expval_2024-11-27_12-41-04.csv  expval_2025-01-14_10.csv  expval_2025-01-14_20.csv  expval_2025-01-16_21.csv  expval_2025-02-09_14.csv  expval_2025-02-13_20.csv  expval_2025-02-14_00.csv  expval_2025-02-15_01.csv  expval_2025-02-15_17.csv  expval_2025-02-19_19.csv  expval_2025-02-19_20.csv  expval_2025-02-19_21.csv  expval_2025-02-20_21.csv  expval_2025-02-21_15.csv  expval_2025-02-21_16.csv  expval_2025-02-25_22.csv  expval_2025-02-26_18.csv  expval_2025-02-26_21.csv  expval_2025-02-26_22.csv  expval_2025-02-27_14.csv  expval_2025-02-27_18.csv  expval_2025-02-27_19.csv  expval_2025-02-28_14.csv  expval_2025-02-28_15.csv  expval_2025-03-03_22.csv  expval_2025-03-04_21.csv  expval_2025-03-31_12.csv  expval_2025-04-02_07.csv  expval_2025-04-03_00.csv  expval_2025-04-04_15.csv  expval_2025-04-07_22.csv  expval_2025-04-09_21.csv  expval_2025-04-10_16.csv  expval_2025-04-14_15.csv  expval_2025-04-17_05.csv  expval_2025-04-23_12.csv  gates_2024-10-01_20-15-41.csv  gates_2024-10-10_13-40-14.csv  (+108 more)
benchmarks/scripts/: __init__.py  benchmark_script.py  cirq_compile.py  common.py  deploy_benchmark_task.py  expval_benchmark.py  gate_counters.py  generate_layouts.py  generate_qasm.py  plot_avg_benchmarks_over_time.py  plot_expval_benchmarks_over_time.py  plot_latest_benchmarks.py  plot_latest_expval_benchmarks.py  pytket_compile.py  small_test.sh  (+5 more)
compiler_tests/: qiskit_benchpress_time.ipynb  qiskit_test.ipynb  tket_test.ipynb
custom_compiler_experiments/: check_parameterized.ipynb  custom_compile_heisenberg_ring.ipynb  custom_compile_qcnn.ipynb  custom_compile_qft.ipynb  custom_compile_random.ipynb
docs/: api.rst  conf.py  index.rst  user_guide.md
qhrf/: QHRF_OPTIMIZED_40Q.qasm  QHRF_RAW_40Q.qasm  qhrf_pass.py  qhrf_uccbench_40qgen.py
quantum_translator/: .gitignore  setup.py
transpiler/: ucc_default.py
ucc/: __init__.py  _version.py  compile.py  custom_cx.py
(+110 files in other folders)
