[tool.poetry]
name = "ucc"
version = "0.4.2"
description = "Unitary Compiler Collection: A quantum circuit interface and compiler for multiple quantum frameworks"
authors = ["Jordan Sullivan <jordan@unitary.foundation>", "Misty Wahl", "Nate Stemen"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/unitaryfund/ucc"
packages = [{ include = "ucc" }]

[tool.poetry.dependencies]
python = ">=3.12,<4"
qiskit = ">=1.3.0"
qiskit-qasm3-import = "0.5.1"
cirq-core = ">=1.4.0"
pytket = ">=1.3.0"
qbraid = ">=0.7.3"
ply = ">=3.11"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
pytest-cov = ">=2.10"

[tool.poetry.group.doc.dependencies]
sphinx = ">=8.1.3"
myst-parser = ">=0.15"

[tool.poetry.scripts]
ucc = "ucc.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
