[project]
name = "ucc"
version = "0.4.4"
description = "Unitary Compiler Collection: A quantum circuit interface and compiler for multiple quantum frameworks"
authors = [
    {name="Jordan Sullivan", email="jordan@unitary.foundation"},
    {name="Misty Wahl"},
    {name="Nate Stemen"},
    {name="Brad Chase"}
]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/unitaryfund/ucc"
requires-python = ">=3.12,<4"
packages = [{ include = "ucc" }]
dependencies = [
    "cirq-core>=1.4.1",
    "ply>=3.11",
    "pytket>=1.40.0",
    "qbraid>=0.9.3",
    "qiskit>=1.3.2",
    "qiskit-qasm3-import>=0.5.1",
]

[tool.poetry]
packages = [{include = "ucc"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
pytest-cov = ">=2.10"
qiskit-aer = "==0.15.1"
seaborn = "*"
ruff = "^0.9.4"
pre-commit = "^4.1.0"

[tool.poetry.group.doc.dependencies]
sphinx = ">=8.1.3"
myst-parser = ">=0.15"

[tool.poetry.scripts]
ucc = "ucc.__main__:main"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
