[project]
name = "ucc"
version = "0.4.6"
description = "Unitary Compiler Collection: A quantum circuit interface and compiler for multiple quantum frameworks"
authors = [
    { name = "Jordan Sullivan" },
    { name = "Misty Wahl" },
    { name = "Nate Stemen" },
    { name = "Brad Chase" },
]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/unitaryfoundation/ucc"
requires-python = ">=3.12,<4"
packages = [{ include = "ucc" }]
dependencies = [
    "cirq-core>=1.4.1,<2.0.0",
    "ply>=3.11,<4.0.0",
    "pytket>=1.40.0,<3.0.0",
    "qbraid>=0.9.3,<1.0.0",
    "qiskit>=1.4.2,<3.0.0",
    "qiskit-qasm3-import>=0.5.1,<1.0.0",
]


[dependency-groups]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "ruff>=0.9.4",
    "pre-commit>=4.1.0",
]
docs = [
    "sphinx>=8.1.3",
    "myst-parser>=0.15",
    "linkify-it-py>=2.0.3",
    "sphinxcontrib-bibtex>=2.6.3",
]

[project.scripts]
ucc = "ucc.__main__:main"

[tool.ruff]
line-length = 79

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
